re PR debug/11098 ([dwarf2] g++ doesn't emit complete debugging information for local variables in destructors)

PR debug/11098
	* integrate.c (copy_decl_for_inlining): Do not mark copied decls
	as DECL_ABSTRACT.

From-SVN: r69374